--- a/index.html
+++ b/index.html
@@ -29,12 +29,14 @@
             <h2>My Projects</h2>
             <div class="portfolio-items">
                 <div class="portfolio-item">
-                    <alt="Project 2>
+                    <!-- Fixed missing img tag and alt attribute -->
+                    <img src="path/to/project2-image.jpg" alt="Project 2">
                     <h3>Dough Re Mi</h3>
                     <p>A mobile-friendly application that offers an easy-to-use platform for customers to order pizzas effortlessly. This app facilitates a smooth journey for users, allowing them to explore menu choices, place orders, and conduct secure payments.</p>
                 </div>
                 <div class="portfolio-item">
-                    <alt="Project 3>
+                    <!-- Fixed missing img tag and alt attribute -->
+                    <img src="path/to/project3-image.jpg" alt="Project 3">
                     <h3>Tic Tac Toe Mania</h3>
                     <p>A pair of people can play tic tac toe. Playing X and O, respectively, are two players. In a grid of three-by-three, four-by-four, and five-by-five cells, the players alternately place their marks. A player wins the game if they get three marks in any direction—row, column, or diagonally. It aims to provide an engaging experience that fosters cognitive skills, decision-making skills, and consequences.</p>
                 </div>
